# audius-terminal-player

./: .golangci.yml  LICENSE  README.md  go.mod  go.sum  main.go  requirements.txt  setup.cfg  setup.py
Formula/: audius.rb
src/: __init__.py  root.go
src/cli/: root.go
src/cli/commands/: trending.py
src/command/: trending.go
src/libs/: api.py  playback.py  utils.py
src/scripts/: install.sh  release.sh  tag.sh
src/tui/: Player.py  __init__.py
src/tui/components/: NowPlaying.py  Table.py
src/tui/models/: Playlist.py  User.py
src/tui/renderers/: Track.py
src/utils/: api.py  playback.py  utils.go
