[metadata]
name = audius
version = 0.0.3
url = https://github.com/AudiusProject/audius-cli
author = C.S. Jiang, Cheran
author_email = christine@audius.co
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
license_files = LICENSE
description = Audius CLI Music Player
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
package_dir =
    =.
python_requires = >=3.9,<4
install_requires =
    certifi==2021.10.8
    charset-normalizer==2.0.9
    click==8.0.3
    idna==3.3
    pathspec==0.9.0
    py-cui==0.1.4
    requests==2.26.0
    tomli==1.2.3
    urllib3==1.26.7

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    audius = src:main
